# fty-alert-srr

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile.am  README.md  ci_deploy.sh  ci_deploy_obs.sh  configure.ac  project.xml
conf/: fty-alert-srr.cfg
debian/: changelog
doc/: .gitignore  Makefile.am  asciidoc.conf
include/: Makefile.am  fty-alert-srr.h
packaging/debian/: changelog  control  copyright  fty-alert-srr.install  rules
packaging/redhat/: fty-common-messagebus.spec
server/: CMakeLists.txt
server/conf/: fty-alert-srr.cfg
server/src/: fty-alert-srr.cpp
server/src/alert/: rule.h  rule_manager.h
server/src/srr/: alert-srr.cpp  alert-srr.h
server/src/utils/: serialization.h
server/systemd/: fty-alert-srr.service
src/: .gitignore  Makemodule.am  fty-alert-srr.cpp
src/alert/: rule.cpp  rule.h  rule_manager.cpp  rule_manager.h
src/config/: config.cpp  config.h
src/srr/: alert-srr.cpp
src/utils/: messages.cpp  messages.h  serialization.cpp
systemd/: fty-alert-srr.service
